# simple_viewer

./: CMakeLists.txt  DEVELOPMENT.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h  main.cpp
src/camera/: Camera.cpp  Camera.h  FlyCamera.cpp  FlyCamera.h  OrbitCamera.cpp  OrbitCamera.h
src/io/: AssimpLoader.cpp  AssimpLoader.h  ModelData.h  ModelImporter.cpp  ModelImporter.h  ModelLoader.cpp  ModelLoader.h  PLYLoader.cpp  PLYLoader.h  STLLoader.cpp  STLLoader.h
src/render/: GLViewport.cpp  GLViewport.h  Mesh.cpp  Mesh.h  PointCloud.cpp  PointCloud.h  Shader.cpp  Shader.h  shaders.qrc
src/render/shaders/: basic.vert  blinn_phong.frag
src/scene/: SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h
src/ui/: MainWindow.cpp  MainWindow.h
